<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:contentScrim="?attr/colorPrimary">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_event"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="32dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="left"
                android:subtitleTextAppearance="@style/Toolbar.TitleText"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:src="@drawable/button_selector"
        app:backgroundTint="@color/colorPrimary"
        app:layout_anchor="@id/app_bar_event"
        app:layout_anchorGravity="bottom|end" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/movie_image"
                    style="@style/myImageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/strange" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <RatingBar
                        android:id="@+id/movie_rating"
                        style="?attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/movie_date"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:isIndicator="true"
                        android:max="10"
                        android:numStars="10"
                        android:rating="2"
                        android:stepSize="1"
                        android:theme="@style/RatingBar" />

                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="18-2-2016" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/contentFrameTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trailers"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/trailersView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v4.view.ViewPager
                            android:id="@+id/videos"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"></android.support.v4.view.ViewPager>

                        <android.support.design.widget.TabLayout
                            android:id="@+id/tabDots"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabBackground="@drawable/tab_selector"
                            app:tabGravity="center"
                            app:tabIndicatorHeight="0dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/noTrailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_trailers"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <FrameLayout
                    android:id="@+id/loadingTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/errorTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inflatedId="@+id/main_loading">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/error_trailers"
                            android:textAlignment="center"
                            android:textColor="#0000FF" />

                        <ImageButton
                            android:id="@+id/retry_trailers"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="#ffffff"
                            android:scaleType="fitXY"
                            android:src="@drawable/retry" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/loadingReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/errorReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inflatedId="@+id/main_loading">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/error_reviews"
                            android:textAlignment="center"
                            android:textColor="#0000FF" />

                        <ImageButton
                            android:id="@+id/retryReviews"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="#ffffff"
                            android:scaleType="fitXY"
                            android:src="@drawable/retry" />
                    </LinearLayout>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/contentFrameReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <udacity.movieapp.view.detail.NonScrollExpandableListView
                        android:id="@+id/reviewsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></udacity.movieapp.view.detail.NonScrollExpandableListView>

                    <TextView
                        android:id="@+id/noReviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/no_reviews"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginBottom="?attr/actionBarSize"
                android:text="slk" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>